polyincludedir=@includedir@/polylib
polyinclude_HEADERS = \
	Lattice.h \
	Matop.h \
	NormalForms.h \
	SolveDio.h \
	Zpolyhedron.h \
	alpha.h \
	arithmetique.h \
	arithmetic_errors.h \
	compress_parms.h \
	ehrhart.h \
	errormsg.h \
	eval_ehrhart.h \
	ext_ehrhart.h \
	homogenization.h \
	matrix.h \
	matrix_addon.h \
	matrix_permutations.h \
	param.h \
	polyhedron.h \
	polylib.h \
	polylib32.h \
	polylib64.h \
	polylibgmp.h \
	polyparam.h \
	ranking.h \
	types.h \
	vector.h

poly_arith = $(top_srcdir)/source/arith
arithmetic_errors.h: $(poly_arith)/arithmetic_errors.h
	$(LN_S) $<
arithmetique.h: $(poly_arith)/arithmetique.h
	$(LN_S) $<
